--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
-
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "rerousel": "^0.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
