--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -16,12 +16,15 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
     "bootstrap": "^5.3.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.2",
+    "react-table": "^7.8.0",
     "rerousel": "^0.1.9"
   },
   "devDependencies": {
