--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "react-router-bootstrap": "^0.26.2"
+    "chart.js": "^4.3.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-google-charts": "^4.0.0"
   }
 }
