--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -17,16 +17,22 @@
     "@trendyol-js/react-carousel": "^3.0.2",
     "bi": "^0.0.1",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
     "hi": "^0.0.0",
     "mdbreact": "^5.2.0",
+    "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-donut-chart": "^1.3.3",
     "react-icons": "^4.10.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.2",
     "react-table": "^7.8.0",
+    "recharts": "^2.7.2",
     "rerousel": "^0.1.9"
   },
   "devDependencies": {
