--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -10,16 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.3",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
     "bi": "^0.0.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
+    "chartjs": "^0.3.24",
     "hi": "^0.0.0",
-    "mdbreact": "^5.2.0",
+    "mdb-react-ui-kit": "^6.1.0",
+    "mdbreact": "^4.6.1",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
