--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mui/material": "^5.14.2",
     "chart.js": "^4.3.0",
     "react-chartjs-2": "^5.2.0",
-    "react-google-charts": "^4.0.0"
+    "react-google-charts": "^4.0.0",
+    "reactjs-popup": "^2.0.5"
   }
 }
