--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -18,11 +18,10 @@
     "@mui/material": "^5.14.3",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
+    "axios": "^1.4.0",
     "bi": "^0.0.1",
     "bootstrap": "^5.3.0",
-
     "chart.js": "^4.3.1",
-
     "hi": "^0.0.0",
     "mdb-react-ui-kit": "^6.1.0",
     "mdbreact": "^4.6.1",
