--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/inspireinteriors
+spring.datasource.username=postgres
+spring.datasource.password=inspireinteriors
 
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=none
+
+#Flyway properties
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/inspireinteriors
+spring.flyway.password= inspireinteriors
+spring.flyway.user= postgres
+spring.flyway.schemas=migrations
+spring.flyway.locations=classpath:db/migration/postgresql
