--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -39,7 +39,8 @@
     "react-table": "^7.8.0",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.2",
-    "rerousel": "^0.1.9"
+    "rerousel": "^0.1.9",
+    "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
