--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -34,6 +34,7 @@
     "react-donut-chart": "^1.3.3",
     "react-icons": "^4.10.1",
     "react-rating-stars-component": "^2.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.2",
     "react-table": "^7.8.0",
