--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
     "react-icons": "^4.10.1",
