--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -25,6 +25,7 @@
     "bi": "^0.0.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.1",
+    "formik": "^2.4.3",
     "hi": "^0.0.0",
     "mdb-react-ui-kit": "^6.2.0",
     "mdbreact": "^4.6.1",
@@ -45,7 +46,8 @@
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.2",
     "rerousel": "^0.1.9",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
