--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -16,12 +16,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@mui/x-date-pickers": "^6.11.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
     "axios": "^1.4.0",
     "bi": "^0.0.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "hi": "^0.0.0",
     "mdb-react-ui-kit": "^6.1.0",
     "mdbreact": "^4.6.1",
@@ -30,9 +33,12 @@
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.16.0",
+    "react-daypicker": "^3.0.10",
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
     "react-icons": "^4.10.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-bootstrap": "^0.26.2",
@@ -41,6 +47,7 @@
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.2",
     "rerousel": "^0.1.9",
+    "sassy-datepicker": "^0.10.2",
     "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
