--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -20,9 +20,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@mui/x-date-pickers": "^6.11.0",
-
     "@papercups-io/chat-widget": "^1.3.1",
-
     "@trendmicro/react-sidenav": "^0.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
     "axios": "^1.4.0",
@@ -40,6 +38,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
+    "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-chat-widget": "^3.1.4",
     "react-datepicker": "^4.16.0",
