--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -20,9 +20,7 @@
     "@trendyol-js/react-carousel": "^3.0.2",
     "bi": "^0.0.1",
     "bootstrap": "^5.3.0",
-
     "chart.js": "^4.3.1",
-
     "hi": "^0.0.0",
     "mdb-react-ui-kit": "^6.1.0",
     "mdbreact": "^4.6.1",
@@ -39,7 +37,8 @@
     "react-router-dom": "^6.14.2",
     "react-table": "^7.8.0",
     "recharts": "^2.7.2",
-    "rerousel": "^0.1.9"
+    "rerousel": "^0.1.9",
+    "run": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
