Migration Part Done
Hibernate codes updated
Order Component files updated

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,12 +5,13 @@ spring.datasource.password=inspireinteriors
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 #Flyway properties
-spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://localhost:5432/inspireinteriors
-spring.flyway.password= inspireinteriors
-spring.flyway.user= postgres
-spring.flyway.schemas=migrations
-spring.flyway.locations=classpath:db/migration/postgresql
+#spring.flyway.enabled=true
+#spring.flyway.url=jdbc:postgresql://localhost:5432/inspireinteriors
+#spring.flyway.password= inspireinteriors
+#spring.flyway.user= postgres
+#spring.flyway.schemas=migrations
+#spring.flyway.locations=classpath:db/migration/postgresql
