email sending backend and front end

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,17 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ezolarteam@gmail.com
+spring.mail.password=vkbyfvhiyuaquodc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+
 #Flyway properties
 #spring.flyway.enabled=true
 #spring.flyway.url=jdbc:postgresql://localhost:5432/inspireinteriors
