--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,6 +54,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -78,6 +83,16 @@
 			<groupId>com.vaadin.external.google</groupId>
 			<artifactId>android-json</artifactId>
 			<version>0.0.20131108.vaadin1</version>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>6.0.10</version>
+        </dependency>
+		<dependency>
+			<groupId>me.minidigger</groupId>
+			<artifactId>MiniMessage</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 
 
