--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.1</version>
+		<version>3.1.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>inspireinteriors</groupId>
@@ -90,10 +90,11 @@
             <version>6.0.10</version>
         </dependency>
 		<dependency>
-			<groupId>me.minidigger</groupId>
-			<artifactId>MiniMessage</artifactId>
-			<version>2.1.0</version>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>5.21.0</version>
 		</dependency>
+
 
 
 	</dependencies>
