--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -31,7 +31,7 @@
     "dayjs": "^1.11.9",
     "formik": "^2.4.3",
     "hi": "^0.0.0",
-    "mdb-react-ui-kit": "^6.2.0",
+    "mdb-react-ui-kit": "^6.3.0",
     "mdbreact": "^4.6.1",
     "rc-chat-view": "^1.0.2",
     "rc-slider": "^10.2.1",
@@ -46,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
     "react-icons": "^4.10.1",
+    "react-image-zooom": "^1.2.0",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
