--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
     "chart.js": "^4.3.0",
+    "react-3d-viewer": "^1.0.12",
     "react-chartjs-2": "^5.2.0",
     "react-google-charts": "^4.0.0",
-    "reactjs-popup": "^2.0.5"
+    "react-image-zooom": "^1.2.0",
+    "react-model-viewer-3d": "^1.3.1",
+    "reactjs-popup": "^2.0.5",
+    "three": "^0.158.0",
+    "three-gltf-loader": "^1.111.0",
+    "three-pointer-lock-controls": "^1.0.0"
   }
 }
