--- a/Inspire Interiors/package.json
+++ b/Inspire Interiors/package.json
@@ -36,6 +36,7 @@
     "rc-chat-view": "^1.0.2",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
+    "react-3d-viewer": "^1.0.12",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-calendar": "^4.6.0",
